--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 
       <p style="font-size: 22px;">Take your selfie to generate HAND
       	<br>
-        <b style="color: yellow">Are you Happy?</b>
+        <b style="color: yellow">Victory</b>
         <br>
-        <b style="color: black">Are you Sad?</b>
+        <b style="color: black">Thunbs Up</b>
         <br>
-        <b style="color: red">Are you Angry?</b>
+        <b style="color: red">Writing</b>
         <br>
       </p>
 
@@ -64,17 +64,17 @@
       </div>
       <div class="col-md-4 col-sm-12 col-xs-12">
         <label>Prediction 1 -</label>
-        <p class="emotion_name" id="result_emotion_name"></p>
+        <p class="guesture_name" id="result_guesture_name"></p>
         <p class="HAND" id="update_HAND"></p>
         <label>Prediction 2 - </label>
-        <p class="emotion_name" id="result_emotion_name2"></p>
+        <p class="guesture_name" id="result_guesture_name2"></p>
         <p class="HAND" id="update_HAND2"></p>
       </div>
       <div class="col-md-4 col-sm-12 col-xs-12">
         <label>Snapshot - </label>
         <div id="result"></div>
         <br><br> 
-        <button onclick="check();" class="btn btn-succes">Predict Emotion</button>
+        <button onclick="check();" class="btn btn-succes">Predict guesture</button>
       </div>
     </center>
 
